# heckserver

./: Cargo.toml  tavsa.db
.sqlx/: query-4500861d833f37d4e722e9e6c2d51aa0e16794e061ad7d30ce4d53728a80a748.json  query-5edf9c445fcb8c0a4fe0ee201a7e9749fc244d3011627f003f949ea927c3d3eb.json  query-844ce3d564a728965ab54c66cfd378a0de5a76216e06a9048735aadff1fdd57b.json  query-fc046c5323405418ab5da10fcfeb89ecad84338e08f6b97f0bfac541efb26f6c.json
src/: main.rs  static_handler.rs
static/: tavsa.html
